# grafika

./: .gitignore  CMakeLists.txt  README.md  README.md.txt  boostrap.py
11_1A/: CMakeLists.txt  main.cpp
1A/: 1a.py  CMakeLists.txt  main.cpp
2_1B/: CMakeLists.txt  main.cpp
2_2A/: CMakeLists.txt  main.cpp
3D/: CMakeLists.txt  main.cpp
4A/: CMakeLists.txt  main.cpp
8B/: CMakeLists.txt  main.cpp
9A/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  Utility.cpp  Utility.h
glwrap/: CMakeLists.txt  Utility.cpp  Utility.h
test/: CMakeLists.txt  main.cpp
test_files/: 3d.in1  3d.in2  3d.in3  3d.in4  3d.in5
